--- a/AiGMBackEnd/appsettings.json
+++ b/AiGMBackEnd/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AIProviders": {
+    "DefaultProvider": "OpenAI",
+    "OpenAI": {
+      "ApiKey": "your-openai-api-key-here",
+      "ModelName": "gpt-4o",
+      "MaxTokens": 2000,
+      "Temperature": 0.7
+    }
+  }
 }
