--- a/appsettings.json
+++ b/appsettings.json
@@ -5,14 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "AIProviders": {
-    "DefaultProvider": "OpenAI",
-    "OpenAI": {
-      "ApiKey": "your-openai-api-key-here",
-      "ModelName": "gpt-4o",
-      "MaxTokens": 2000,
-      "Temperature": 0.7
-    }
-  }
+  "AllowedHosts": "*"  
 }
